# FRE2016

basic_navigation/: CMakeLists.txt  package.xml
basic_navigation/launch/: publish_rabbit.launch  start_DemoPointFollower.launch  start_PointFollower.launch  start_robot.launch
basic_navigation/src/: Point_Follower.cpp
dynamic_transform_manager/: CMakeLists.txt  package.xml
dynamic_transform_manager/cfg/: DynamicTransform.cfg  DynamicTransform.cfg~  GoalManager.cfg~  SickLaserFilter.cfg~
dynamic_transform_manager/launch/: start_dynamic_transform_manager.launch~  test_dynamic_tf.launch
dynamic_transform_manager/src/: dynamic_transform_node.cpp
fieldrobot_05/: CMakeLists.txt  package.xml
fieldrobot_05/cfg/: lidar_row_extractor.cfg  rabbit_follow_params.cfg
fieldrobot_05/launch/: start_demo.launch  start_navigation.launch  start_robot.launch
fieldrobot_05/launch/actors/: start_joystick.launch  start_motorcontrollers.launch  start_motorcontrollers2.launch
fieldrobot_05/launch/filters/: filter_obstacle.yaml  filter_one.yaml  filter_two.yaml  start_cloud_filter.launch  start_cloud_navigation_filters.launch  start_kinect_filter.launch  start_laser_filter.launch  start_laser_filter_obstacle.launch  start_ransac_row_detector.launch  start_ransac_row_detector_sim.launch  start_ransac_row_detector_task2.launch  start_remap_laser.launch
fieldrobot_05/launch/navigation/: start_goalmanager_demo.launch  start_goalmanager_headland.launch  start_kinect_row_speed.launch  start_laser_navigation.launch  start_laser_obstacle_speed.launch  start_mode_changer.launch  start_mode_changer_demo.launch  start_mode_changer_freestile.launch  start_obstacle_detection.launch  task1_row_navigator.launch  task2_row_navigator.launch
fieldrobot_05/launch/robot_model/: start_kinect_model.launch  start_odometry.launch  start_robot_model.launch
fieldrobot_05/launch/sensors/: start_gps.launch  start_imu.launch  start_kinect2.launch  start_laserscanners.launch
fieldrobot_05/src/Navigation/: goal_creater.cpp  laser_error_cmd_vel.cpp  laser_error_cmd_vel2.cpp  laser_navigation_node.cpp  laser_security_node.cpp  pathParser.cpp  pathParser.h  path_writer.cpp  person_follower.cpp
fieldrobot_05/src/SDC2130/: Constants.h  RoboteqDevice.cpp  RoboteqDevice.h  SDC2130.cpp  SDC2130.h  odometry_node.cpp  sdc2130_core.cpp  sender_node.cpp  sender_node2.cpp
fieldrobot_05/src/joystick_Logitech/: Logitech.cpp  Logitech.h  joystick_core.cpp
fieldrobot_05/src/lidar_row_extractor/: ransac_extractor.cpp  ransac_row_node.cpp
fieldrobot_05/src/mode_changer/: headland_speed_controller.cpp  kinect_row_speed_extractor.cpp  metal_speed_extractor.cpp  mode_changer.cpp  mode_changer_freestile.cpp  row_speed_extractor.cpp
fieldrobot_05/src/odometry/: differential_odometry_node.cpp
fieldrobot_05/src/rabbit_follower/: RabbitFollow.cpp  RabbitFollow.h  rabbit_follower_node.cpp
fieldrobot_05/src/sensor_test/: sensor_test.cpp
fieldrobot_05/urdf/: LMS111.STL  Talos_base.STL  kinect assembly.STL  trimble antena.STL  wheel_talos.STL
fieldrobot_05/waypoints/: demo.txt  freestile.txt  task1_waypoints.txt  task2_waypoints.txt  waypoints.txt
fieldrobot_05/yaml/: footprint.yaml  laser_config.yaml
fieldrobot_event2016/: CMakeLists.txt
fieldrobot_event2016/launch/: start_demo.launch
fieldrobot_event2016/launch/actors/: start_joystick.launch  start_light_relais.launch  start_motorcontrollers.launch
fieldrobot_event2016/launch/filters/: filter_base.yaml  start_base_filter_lasers.launch  start_kinect_filter.launch
fieldrobot_event2016/launch/navigation/: start_goalmanager_back_and_forward.launch  start_goalmanager_headland_left.launch  start_goalmanager_headland_right.launch  start_goalmanager_headland_right_back.launch  start_mode_changer.launch  start_mode_controler_task1.launch  start_mode_controler_task2.launch  start_mode_controler_task3.launch  start_no_touch_follower.launch  start_obstacle_detector.launch  start_pattern_1L.launch  start_pattern_1R.launch  start_pattern_2L.launch  start_pattern_2R.launch  start_pattern_3L.launch  start_pattern_3R.launch  start_pattern_4L.launch  start_pattern_4R.launch  start_pattern_5L.launch  start_pattern_5R.launch  (+6 more)
goal_manager/: CMakeLists.txt  package.xml
goal_manager/cfg/: FrameGoalManager.cfg  GoalManager.cfg
goal_manager/launch/: 3D_frame_goals.launch  3D_frame_scan.launch  3D_frame_scan_fast.launch  goals_mr_absolute.launch  read_goals.launch  robot_goal_manager_test.launch  start_path_writer.launch  test_transform.launch
goal_manager/src/: frame_goal_creater.cpp  goal_creater.cpp  pathParser.cpp  path_writer.cpp  robot_goal_creater.cpp
goal_manager/waypoints/: global_goals.txt  test.txt  test2.txt  test_with_waittime.txt  x_axis_scan.txt  x_axis_scan_fast.txt  y-achsis-scan.ods  y-achsis-scan.txt.ods  y-achsis-scan.txt2.ods  y_axis_scan.txt
image_detection/: CMakeLists.txt  package.xml
image_detection/launch/: start_image_detector.launch
image_detection/src/: image_detection.cpp
pcl_test/: CMakeLists.txt  package.xml
pcl_test/lauch/: assemble_clouds.launch  start_icp_matcher.launch  start_outlier.launch
pcl_test/src/: cloud_assembler.cpp  icp_matcher.cpp  magnet_sensor_assembler.cpp  outlier_filter.cpp  point_cloud_to_pcd.cpp  ransac_line_generator.cpp  robot_ransac_row_filter.cpp  voxel_grid_filter.cpp
pointcloud_plantdetector/: CMakeLists.txt  package.xml
pointcloud_plantdetector/cfg/: Filter.cfg
pointcloud_plantdetector/launch/: start_kinect_plantdetector.launch  start_pointcloud_plantdetector.launch
pointcloud_plantdetector/src/: 3D_plant_detector.cpp  kinect_plant_detector.cpp  laser_row_filter.cpp  robot_ransac_row_filter.cpp  settings_testbag.cpp
sick_laser_filter/: CMakeLists.txt  CMakeLists.txt~
sick_laser_filter/cfg/: ApplyFilter.cfg  SickLaserFilter.cfg~  goal_manager.cfg~  sdc2130.cfg~
sick_laser_filter/launch/: filter_one.yaml  filter_scanner1.yaml~  filter_scanner2 .yaml  filter_test.yaml~  filter_three.yaml  filter_two.yaml  laser_scan_assembler.launch
trimble_scs900/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+62 files in other folders)
