<?xml version="1.0"?>
<package>
  <name>pcl_test</name>
 <version>0.0.0</version>
  <description>The talos package</description>

  <maintainer email="dreiser@uni-hohenheim.org">UniH</maintainer>
  <license>BSD-3-clause</license>

  <!-- <url type="website">http://ros.org/wiki/sdu_armadillo</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
<build_depend>move_base_msgs</build_depend>
  
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
