<?xml version="1.0"?>
<package>
  <name>pointcloud_plantdetector</name>
  <version>0.0.0</version>
  <description>The pointcloud_plantdetector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="talos@todo.todo">talos</maintainer>
	<license>TODO</license>
  	<buildtool_depend>catkin</buildtool_depend>
  	<build_depend>dynamic_reconfigure</build_depend>
  	<build_depend>roscpp</build_depend>
  	<build_depend>rospy</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<run_depend>dynamic_reconfigure</run_depend>
  	<run_depend>roscpp</run_depend>
  	<run_depend>rospy</run_depend>
  	<run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
